# payments-service

./: .dockerignore  .eslintrc.json  .firebaserc  .gitignore  BUILD.bazel  MODULE.bazel  Taskfile.yaml  WORKSPACE  accounts_service.proto  buf.gen.yaml  buf.work.yaml  cloudbuild.yaml  docker-compose.yaml  dockerfile  firebase.json  go.mod  go.sum  go.work.sum  go_deps.bzl  jest.config.js  main.go  package-lock.json  package.json  pnpm-lock.yaml  sweep.yaml  wallet-service.proto
.githooks/: pre-commit  pre-push
.github/: dependabot.yaml  renovate.json
.github/workflows/: buf-push.yaml  cd.yaml  dev.yaml  merge.yaml  nightly.yaml  pr.yaml  push.yaml
.trunk/: trunk.yaml
.trunk/plugins/: trunk
api/: buf.md  buf.yaml
api/interceptors/: auth_interceptor.go  panic_interceptor.go
api/payout-service/: buf.yaml
api/recharge-service/: buf.yaml
api/ride/payments/v1alpha1/: BUILD.bazel  payout.pb.go  payout.pb.validate.go  payout.proto  recharge.pb.go  recharge.pb.validate.go  recharge.proto  service.pb.go  service.pb.validate.go  service.proto  transaction.pb.go  transaction.pb.validate.go  transaction.proto  transfer.pb.go  transfer.pb.validate.go  transfer.proto  wallet.pb.go  wallet.pb.validate.go  wallet.proto
api/ride/payments/v1alpha1/paymentsv1alpha1connect/: service.connect.go
api/ride/payments/v1alpha1/v1alpha1connect/: BUILD.bazel  service.connect.go
api/ride/wallet/v1alpha1/: payout.pb.go  payout.pb.validate.go  payout.proto  recharge.pb.go  recharge.pb.validate.go  service.pb.go  service.pb.validate.go  service.proto  transaction.pb.go  transaction.pb.validate.go  transaction.proto  transfer.pb.go  transfer.pb.validate.go  transfer.proto  wallet.pb.go  wallet.pb.validate.go  wallet_service.proto
api/service/: create_payout.go  create_payout_account.go  create_recharge.go  create_transactions.go  create_transfers.go  errors.go  get_payout.go  get_payout_account.go  get_recharge.go  get_transaction.go  get_wallet.go  list_payouts.go  list_recharges.go  list_transactions.go  service.go
cmd/api-server/: BUILD.bazel  container_structure_test.yaml  main.go  wire.go  wire_gen.go
config/: BUILD.bazel  config.go
config/di/: wire.go  wire_gen.go
functions/functions/: package-lock.json  package.json
functions/functions/src/: index.ts
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
internal/api-handlers/: BUILD.bazel  create_payout.go  create_payout_account.go  create_recharge.go  create_transactions.go  create_transfers.go  errors.go  get_payout.go  get_payout_account.go  get_recharge.go  get_transaction.go  get_wallet.go  list_payouts.go  list_recharges.go  list_transactions.go  service.go
internal/repositories/auth/: BUILD.bazel  auth_repository.go
internal/repositories/auth/mock/: BUILD.bazel  auth_repository.go
internal/repositories/payout/: BUILD.bazel  payout_repository.go
internal/repositories/payout/mock/: BUILD.bazel  payout_repository.go
internal/repositories/recharge/: BUILD.bazel  recharge_repository.go
internal/repositories/transfer/: BUILD.bazel  transfer-repository.go
internal/repositories/transfer/mock/: BUILD.bazel  transfer-repository.go
internal/repositories/wallet/: BUILD.bazel  wallet_repository.go
internal/repositories/wallet/mock/: BUILD.bazel  wallet_repository.go
protos/: buf.yaml  wallet-service.proto
protos/wallet-service/: buf.yaml
repositories/auth/: auth_repository.go
repositories/payout/: payout_repository.go
repositories/recharge/: recharge_repository.go
repositories/transfer/: transfer-repository.go
repositories/wallet/: wallet_repository.go
src/: app.ts  handlers.ts  index.ts  main.ts  server.ts  utils.ts  wallet-service-handlers.ts  wallet-service.ts
src/errors/: expected-error.ts  internal-error.ts  invalid-argument-error.ts
src/handlers/: accountRepositoryHandlers.ts  ledgerRepositoryHandlers.ts
src/payout-service/: create-payout.ts  get-payout.ts  handlers.ts  list-payouts.ts  utils.ts
src/recharge-service/: create-recharge.ts  get-recharge.ts  handlers.ts  list-recharges.ts  recharge-service.ts  utils.ts
src/repositories/: account-repository.ts  payout-repository.ts  recharge-repository.ts  transaction-repository.ts  wallet-repository.ts
src/services/: account-repository.ts  ledger-repository.ts
src/utils/: regex.ts  verify-auth-header.ts
src/wallet-service/: batch-create-transactions.ts  create-transaction.ts  get-transaction.ts  get-wallet.ts  handlers.ts  list-transactions-by-batch-id.ts  list-transactions.ts  service.ts  wallet-service.ts
test/: index.test.ts
test/api/: add-transactions.test.ts  create-account.test.ts  create-wallet.test.ts  get-account-by-uid.test.ts  get-account.test.ts  get-transaction.test.ts  get-wallet-by-uid.test.ts  get-wallet.test.ts  list-transactions-by-account-id.test.ts  list-transactions-by-batch-id.test.ts  list-transactions.test.ts
test/integration/: create-account.test.ts  create-transactions.test.ts  create-wallet.test.ts  get-account-by-uid.test.ts  get-account.test.ts  get-transaction.test.ts  get-wallet-by-uid.test.ts  get-wallet.test.ts  list-transactions-by-account-id.test.ts  list-transactions-by-batch-id.test.ts  list-transactions.test.ts
test/unit/: create-account.test.ts  get-account-by-uid.test.ts  get-account.test.ts
test/utils/: test-client.ts
test/wallet-service/api/: add-transactions.test.ts  create-wallet.test.ts  get-transaction.test.ts  get-wallet-by-uid.test.ts  get-wallet.test.ts  list-transactions-by-batch-id.test.ts  list-transactions.test.ts
test/wallet-service/integration/: create-transactions.test.ts  create-wallet.test.ts  get-transaction.test.ts  get-wallet-by-uid.test.ts  get-wallet.test.ts  list-transactions-by-batch-id.test.ts  list-transactions.test.ts
test/wallet-service/utils/: test-client.ts
testing/mocks/: auth_repository.go  payout_repository.go  recharge_repository.go  transfer-repository.go  wallet_repository.go
tools/: tools.go
utils/logger/: logger.go
(+14 files in other folders)
