bazel_dep(name = "rules_pkg", version = "0.9.1")

bazel_dep(name = "rules_oci", version = "1.7.5")

# TODO: remove this later. See https://github.com/bazel-contrib/rules_oci/issues/425#issuecomment-1860211483
bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")
bazel_dep(name = "container_structure_test", version = "1.16.0")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless",
    digest = "sha256:112a87f19e83c83711cc81ce8ed0b4d79acd65789682a6a272df57c4a0858534",
    image = "gcr.io/distroless/static",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "distroless")
