load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "api-handlers",
    srcs = [
        "create_payout.go",
        "create_payout_account.go",
        "create_recharge.go",
        "create_transactions.go",
        "create_transfers.go",
        "errors.go",
        "get_payout.go",
        "get_payout_account.go",
        "get_recharge.go",
        "get_transaction.go",
        "get_wallet.go",
        "list_payouts.go",
        "list_recharges.go",
        "list_transactions.go",
        "service.go",
    ],
    importpath = "github.com/ride-app/payments-service/internal/api-handlers",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/payments/v1alpha1",
        "//config",
        "//internal/repositories/auth",
        "//internal/repositories/payout",
        "//internal/repositories/recharge",
        "//internal/repositories/transfer",
        "//internal/repositories/wallet",
        "@com_connectrpc_connect//:connect",
        "@com_github_aidarkhanov_nanoid//:nanoid",
        "@com_github_bufbuild_protovalidate_go//:protovalidate-go",
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@com_github_razorpay_razorpay_go//:razorpay-go",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "api-handlers_test",
    srcs = ["service_suite_test.go"],
    deps = [
        "@com_github_onsi_ginkgo_v2//:ginkgo",
        "@com_github_onsi_gomega//:gomega",
    ],
)
