load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth_repository.go"],
    importpath = "github.com/ride-app/payments-service/internal/repositories/auth",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@com_google_firebase_go_v4//:go",
        "@com_google_firebase_go_v4//auth",
    ],
)
