load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transfer",
    srcs = ["transfer-repository.go"],
    importpath = "github.com/ride-app/payments-service/internal/repositories/transfer",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/payments/v1alpha1",
        "//config",
        "@com_github_aidarkhanov_nanoid//:nanoid",
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@com_github_thoas_go_funk//:go-funk",
        "@com_google_cloud_go_firestore//:firestore",
        "@com_google_firebase_go_v4//:go",
        "@org_golang_google_api//iterator",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
