load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "wallet",
    srcs = ["wallet_repository.go"],
    importpath = "github.com/ride-app/payments-service/internal/repositories/wallet",
    visibility = ["//:__subpackages__"],
    deps = [
        "//api/ride/payments/v1alpha1",
        "//config",
        "@com_github_aidarkhanov_nanoid//:nanoid",
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@com_google_cloud_go_firestore//:firestore",
        "@com_google_firebase_go_v4//:go",
        "@org_golang_google_api//iterator",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
