load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "mock",
    srcs = ["auth_repository.go"],
    importpath = "github.com/ride-app/payments-service/internal/repositories/auth/mock",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/repositories/auth",
        "@com_github_dragonfish_go_v2//pkg/logger",
        "@com_github_golang_mock//gomock",
    ],
)
