load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "v1alpha1connect",
    srcs = ["service.connect.go"],
    importpath = "github.com/ride-app/payments-service/api/ride/payments/v1alpha1/v1alpha1connect",
    visibility = ["//visibility:public"],
    deps = [
        "//api/ride/payments/v1alpha1",
        "@com_connectrpc_connect//:connect",
    ],
)
